Meta: Don't force the CMake cache entry type to STRING
This makes CMake GUIs (like ccmake) display our BOOL options as ON/OFF
toggles.

--- a/Meta/CMake/Superbuild/CMakeLists.txt
+++ b/Meta/CMake/Superbuild/CMakeLists.txt
@@ -57,7 +57,8 @@ include(ExternalProject)
 set(lagom_options "")
 macro(serenity_option name)
     set(${ARGV})
-    list(APPEND lagom_options "-D${name}:STRING=${${name}}")
+    get_property(type CACHE "${name}" PROPERTY TYPE)
+    list(APPEND lagom_options "-D${name}:${type}=${${name}}")
 endmacro()
 include("${SERENITY_SOURCE_DIR}/Meta/CMake/lagom_options.cmake")
 
@@ -92,7 +93,8 @@ ExternalProject_Add(
 set(serenity_options "")
 macro(serenity_option name)
     set(${ARGV})
-    list(APPEND serenity_options "-D${name}:STRING=${${name}}")
+    get_property(type CACHE "${name}" PROPERTY TYPE)
+    list(APPEND serenity_options "-D${name}:${type}=${${name}}")
 endmacro()
 include("${SERENITY_SOURCE_DIR}/Meta/CMake/serenity_options.cmake")
 
