LibGfx/ISOBMFF: Add support for some of the JPEG XL boxes

--- a/Userland/Libraries/LibGfx/CMakeLists.txt
+++ b/Userland/Libraries/LibGfx/CMakeLists.txt
@@ -51,6 +51,7 @@ set(SOURCES
     ImageFormats/ImageDecoder.cpp
     ImageFormats/ISOBMFF/Boxes.cpp
     ImageFormats/ISOBMFF/JPEG2000Boxes.cpp
+    ImageFormats/ISOBMFF/JPEGXLBoxes.cpp
     ImageFormats/ISOBMFF/Reader.cpp
     ImageFormats/JBIG2Loader.cpp
     ImageFormats/JPEG2000Loader.cpp
