AK: Add Tests for FloatingPoint to String conversion functions

--- a/Tests/AK/CMakeLists.txt
+++ b/Tests/AK/CMakeLists.txt
@@ -34,6 +34,7 @@ set(AK_TEST_SOURCES
     TestFixedPoint.cpp
     TestFloatingPoint.cpp
     TestFloatingPointParsing.cpp
+    TestFloatingPointStringConversions.cpp
     TestFlyString.cpp
     TestFormat.cpp
     TestFunction.cpp
