CI: Bump Ubuntu runner to 24.04

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -17,21 +17,21 @@ runs:
       if: ${{ inputs.os == 'Linux' }}
       shell: bash
       run: |
-        # These packages are already part of the ubuntu-22.04 image:
+        # These packages are already part of the ubuntu-24.04 image:
         # cmake libgmp-dev npm shellcheck
         # Packages below aren't.
 
         set -e
 
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-        sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main'
+        sudo add-apt-repository 'deb http://apt.llvm.org/noble/ llvm-toolchain-noble-18 main'
 
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
 
         sudo apt-get update
         sudo apt-get install ccache clang-18 clang++-18 clang-format-18 lld-18 gcc-13 g++-13 libstdc++-13-dev ninja-build unzip qt6-base-dev qt6-tools-dev-tools libqt6svg6-dev qt6-multimedia-dev libgl1-mesa-dev libpulse-dev libssl-dev libegl1-mesa-dev libclang-18-dev
 
-        sudo apt-get remove clang-{13,14,15} clang++-{13,14,15} libclang-{13,14,15}-dev llvm-{13,14,15}
+        sudo apt-get remove clang-{14,15} clang++-{14,15} libclang-{14,15}-dev llvm-{14,15}
         sudo apt-get install clang-18 clang++-18 llvm-18 llvm-18-dev
 
         sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 100
@@ -63,12 +63,12 @@ runs:
         set -e
 
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-        sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-18 main'
+        sudo add-apt-repository 'deb http://apt.llvm.org/noble/ llvm-toolchain-noble-18 main'
 
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
 
         sudo apt-get update
-        sudo apt-get remove clang-{13,14,15} clang++-{13,14,15} libclang-{13,14,15}-dev llvm-{13,14,15}
+        sudo apt-get remove clang-{14,15} clang++-{14,15} libclang-{14,15}-dev llvm-{14,15}
         sudo apt-get install clang-format-18 ccache e2fsprogs gcc-13 g++-13 libstdc++-13-dev libmpfr-dev libmpc-dev ninja-build optipng qemu-utils qemu-system-i386 unzip generate-ninja libegl1-mesa-dev
         sudo apt-get install clang-18 clang++-18 llvm-18 llvm-18-dev
 
