--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -17,21 +17,21 @@ runs:
       if: ${{ inputs.os == 'Linux' }}
       shell: bash
       run: |
-        # These packages are already part of the ubuntu-22.04 image:
-        # cmake libgmp-dev npm shellcheck
+        # These packages are already part of the ubuntu-24.04 image:
+        # cmake gcc-13 g++-13 libgmp-dev libssl-dev libstdc++-13-dev ninja-build npm shellcheck unzip
         # Packages below aren't.
 
         set -e
 
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-        sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-20 main'
+        sudo add-apt-repository 'deb http://apt.llvm.org/noble/ llvm-toolchain-noble-20 main'
 
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
 
         sudo apt-get update
-        sudo apt-get install ccache clang-20 clang++-20 clang-format-20 lld-20 gcc-13 g++-13 libstdc++-13-dev ninja-build unzip qt6-base-dev qt6-tools-dev-tools libqt6svg6-dev qt6-multimedia-dev libgl1-mesa-dev libpulse-dev libssl-dev libegl1-mesa-dev libclang-20-dev
+        sudo apt-get install ccache clang-20 clang++-20 clang-format-20 lld-20 qt6-base-dev qt6-tools-dev-tools libqt6svg6-dev qt6-multimedia-dev libgl1-mesa-dev libpulse-dev libegl1-mesa-dev libclang-20-dev
 
-        sudo apt-get remove clang-{13,14,15} clang++-{13,14,15} libclang-{13,14,15}-dev llvm-{13,14,15}
+        sudo apt-get remove clang-{14..18} clang++-{14..18} libclang-{14..18}-dev llvm-{14..18}
         sudo apt-get install clang-20 clang++-20 llvm-20 llvm-20-dev
 
         sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-20 100
@@ -63,13 +63,13 @@ runs:
         set -e
 
         wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
-        sudo add-apt-repository 'deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-20 main'
+        sudo add-apt-repository 'deb http://apt.llvm.org/noble/ llvm-toolchain-noble-20 main'
 
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
 
         sudo apt-get update
-        sudo apt-get remove clang-{13,14,15} clang++-{13,14,15} libclang-{13,14,15}-dev llvm-{13,14,15}
-        sudo apt-get install clang-format-20 ccache e2fsprogs gcc-13 g++-13 libstdc++-13-dev libmpfr-dev libmpc-dev ninja-build optipng qemu-utils qemu-system-i386 unzip generate-ninja libegl1-mesa-dev
+        sudo apt-get remove clang-{14..18} clang++-{14..18} libclang-{14..18}-dev llvm-{14..18}
+        sudo apt-get install clang-format-20 ccache e2fsprogs libmpfr-dev libmpc-dev optipng qemu-utils qemu-system-i386 generate-ninja libegl1-mesa-dev
         sudo apt-get install clang-20 clang++-20 llvm-20 llvm-20-dev
 
     - name: Enable KVM group perms
