LibCrypto: Add Minisign signature tooling
This allows us to read and write minisign/signify-compatible keys and
signatures, and create new key pairs and signatures. The next commit
will make use of this utility in a CLI frontend.

--- a/Tests/LibCrypto/CMakeLists.txt
+++ b/Tests/LibCrypto/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_SOURCES
     TestHKDF.cpp
     TestHMAC.cpp
     TestMGF.cpp
+    TestMinisign.cpp
     TestOAEP.cpp
     TestPBKDF2.cpp
     TestPoly1305.cpp
