Utilities: Add iffysign
This is a largely minisign/signify-compatible command line tool to
create and verify minisign-compatible signatures and keys. It is missing
some useful functionality at the moment, namely the ability to recreate
public keys from private keys, more output options (quiet, verbose), and
some more I/O options for stdin/stdout. It is, however, enough to
provide the functionality needed for a signing and verification tool.

The name was specifically chosen to not collide with either minisign or
signify, to allow ports of those to coexist. (Both minisign and signify
are, by their nature of self-contained unixy file I/O tools, very
portable (a specifically cross-platform signify port exists), and we
don’t want to prevent useful ports if we can avoid it.)

--- a/Meta/Lagom/CMakeLists.txt
+++ b/Meta/Lagom/CMakeLists.txt
@@ -604,6 +604,7 @@ if (BUILD_LAGOM)
 
         lagom_utility(icc SOURCES ../../Userland/Utilities/icc.cpp LIBS LibGfx LibMain LibURL)
         lagom_utility(iconv SOURCES ../../Userland/Utilities/iconv.cpp LIBS LibTextCodec LibMain)
+        lagom_utility(iffysign SOURCES ../../Userland/Utilities/iffysign.cpp LIBS LibCrypto LibMain)
         lagom_utility(image SOURCES ../../Userland/Utilities/image.cpp LIBS LibGfx LibMain)
         lagom_utility(imgcmp SOURCES ../../Userland/Utilities/imgcmp.cpp LIBS LibGfx LibMain)
         lagom_utility(isobmff SOURCES ../../Userland/Utilities/isobmff.cpp LIBS LibGfx LibMain)
