AK/DOSPackedTime+Tests: Add helpers for parsing Unix timestamps

--- a/Tests/AK/CMakeLists.txt
+++ b/Tests/AK/CMakeLists.txt
@@ -23,6 +23,7 @@ set(AK_TEST_SOURCES
     TestComplex.cpp
     TestConstrainedStream.cpp
     TestCoroutine.cpp
+    TestDOSPackedTime.cpp
     TestDisjointChunks.cpp
     TestDistinctNumeric.cpp
     TestDoublyLinkedList.cpp
