Kernel/aarch64: Add support for the Pi 5 xHCs in the RP1
This driver doesn't get the base addresses and interrupt numbers from
the devicetree, since the devicetree seems to expect that the RP1 BAR1
is set to 0. Our BAR allocator chooses a different address.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -482,6 +482,7 @@ elseif("${SERENITY_ARCH}" STREQUAL "aarch64")
         Arch/aarch64/RPi/InterruptController.cpp
         Arch/aarch64/RPi/Mailbox.cpp
         Arch/aarch64/RPi/MiniUART.cpp
+        Arch/aarch64/RPi/RP1.cpp
         Arch/aarch64/RPi/SDHostController.cpp
         Arch/aarch64/RPi/Timer.cpp
         Arch/aarch64/RPi/Watchdog.cpp
