Tests/LibPDF: Add recently added test files to CMakeLists.txt
That way, they show up in /home/anon/Documents/pdf and can be
admired within SerenityOS.

--- a/Tests/LibPDF/CMakeLists.txt
+++ b/Tests/LibPDF/CMakeLists.txt
@@ -22,8 +22,12 @@ set(TEST_FILES
     paths.pdf
     pattern.pdf
     rotate.pdf
+    shade-coons.pdf
     shade-function.pdf
+    shade-gouraud-free.pdf
+    shade-gouraud-lattice.pdf
     shade-radial.pdf
+    shade-tensor.pdf
     standard-14-fonts.pdf
     text.pdf
     type1.pdf
