Kernel: Add posix_spawn syscall
This commit introduces the foundational implementation of the
`sys$posix_spawn` system call. It provides a new kernel-level primitive
for spawning processes - meant to replace the current LibC fork() +
exec().

Key features of this implementation:
-   Provides the core functionality to spawn a new process using a
    specified path, argument list, and environment variables.
-   The kernel-side spawn operation is designed for practically O(1)
    time complexity with respect to parent process resources that fork()
    would copy (e.g., memory space). This offers a significant
    performance improvement over the current LibC posix_spawn wrapper,
    which typically relies on an O(n) full fork() operation followed by
    `execve()`.

It does not yet feature full POSIX compliance since fileactions and
spawnattr are not yet implemented.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -337,6 +337,7 @@ set(KERNEL_SOURCES
     Syscalls/pipe.cpp
     Syscalls/pledge.cpp
     Syscalls/poll.cpp
+    Syscalls/posix_spawn.cpp
     Syscalls/prctl.cpp
     Syscalls/process.cpp
     Syscalls/profiling.cpp
@@ -443,7 +444,7 @@ if ("${SERENITY_ARCH}" STREQUAL "x86_64")
 
         # TODO: Share these with the aarch64 build
         Interrupts/SpuriousInterruptHandler.cpp
-        kprintf.cpp        
+        kprintf.cpp
     )
 
     set(KERNEL_SOURCES
@@ -454,7 +455,7 @@ if ("${SERENITY_ARCH}" STREQUAL "x86_64")
 
     set(KERNEL_SOURCES
         ${KERNEL_SOURCES}
-        
+
         ${CMAKE_CURRENT_SOURCE_DIR}/Arch/x86_64/ASM_wrapper.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Arch/x86_64/CPUID.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/Arch/x86_64/InterruptManagement.cpp
@@ -697,11 +698,11 @@ add_compile_options(-fstack-protector-strong)
 add_compile_options(-fno-exceptions)
 add_compile_options(-nostdlib)
 
-# Auto initialize trivial types on the stack, we use "pattern" as 
+# Auto initialize trivial types on the stack, we use "pattern" as
 # it's the only option portable across compilers going forward.
 #
 # This is designed to help avoid uninitialized variables bugs and
-# information disclosures coming from the kernel stack. 
+# information disclosures coming from the kernel stack.
 #
 # FIXME: It appears to conflict with something during the boot of the
 # aarch64 kernel, we should investigate and remove this special case.
