Tests: Add Kernel test for posix_spawn

--- a/Tests/Kernel/CMakeLists.txt
+++ b/Tests/Kernel/CMakeLists.txt
@@ -48,6 +48,7 @@ set(LIBTEST_BASED_SOURCES
     TestSFNUtilities.cpp
     TestSharedInodeVMObject.cpp
     TestPosixFallocate.cpp
+    TestPosixSpawn.cpp
     TestPrivateInodeVMObject.cpp
     TestKernelAlarm.cpp
     TestKernelFilePermissions.cpp
