Meta+Kernel: Enable `-fno-sanitize-recover=undefined` by default
This makes the Kernel UBSan deadly by compile time,
it can be made recoverable by setting
`ENABLE_KERNEL_UNDEFINED_SANITIZER_ALWAYS_DEADLY` to `OFF` in the
CMake options, and the `ubsan_is_deadly` sysctl option to `0`.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -805,6 +805,11 @@ if (ENABLE_KERNEL_UNDEFINED_SANITIZER)
     # Kernel Undefined Behavior Sanitizer (KUBSAN)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
     set_source_files_properties(Security/UBSanitizer.cpp PROPERTIES COMPILE_FLAGS "-fno-sanitize=undefined")
+    
+    if (ENABLE_KERNEL_UNDEFINED_SANITIZER_ALWAYS_DEADLY)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-sanitize-recover=undefined")
+    endif()
+    add_compile_definitions(ENABLE_KERNEL_UNDEFINED_SANITIZER_ALWAYS_DEADLY=$<BOOL:${ENABLE_KERNEL_UNDEFINED_SANITIZER_ALWAYS_DEADLY}>)
 endif()
 
 if (ENABLE_KERNEL_ADDRESS_SANITIZER)
