Tests/LibPDF: Add clip.pdf
This contains some basic tests for clipping to a path.
It also contains a test for setting the clip path from text.

This file was hand-written.

--- a/Tests/LibPDF/CMakeLists.txt
+++ b/Tests/LibPDF/CMakeLists.txt
@@ -8,6 +8,7 @@ foreach(source IN LISTS TEST_SOURCES)
 endforeach()
 
 set(TEST_FILES
+    clip.pdf
     colorspaces.pdf
     complex.pdf
     encoding.pdf
