Meta: Add bugbear and isort to ruff configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,15 @@
 line-length = 120
 [tool.ruff.format]
 quote-style = "preserve"
+
+[tool.ruff.lint]
+# Enable more useful rules.
+# https://docs.astral.sh/ruff/rules/
+extend-select = [
+    "B", # flake8-bugbear
+    "I", # isort
+]
+
+[tool.ruff.lint.isort]
+force-single-line = true
+lines-between-types = 1
