--- a/Kernel/Prekernel/CMakeLists.txt
+++ b/Kernel/Prekernel/CMakeLists.txt
@@ -16,6 +16,9 @@ set(SOURCES
     ../../Userland/Libraries/LibELF/Relocation.cpp
     )
 
+# UBSAN handlers should not get sanitized themselves
+set_source_files_properties(UBSanitizer.cpp PROPERTIES COMPILE_FLAGS "-fno-sanitize=undefined")
+
 if ("${SERENITY_ARCH}" STREQUAL "x86_64")
     set(SOURCES
         ${SOURCES}
