Tests/Kernel: Enable TestEFault on AArch64
The last commit implemented SafeMem functions that don't panic on failed
accesses.

--- a/Tests/Kernel/CMakeLists.txt
+++ b/Tests/Kernel/CMakeLists.txt
@@ -39,6 +39,7 @@ serenity_test("crash.cpp" Kernel MAIN_ALREADY_DEFINED)
 
 set(LIBTEST_BASED_SOURCES
     TestAnonymousMmap.cpp
+    TestEFault.cpp
     TestEmptyPrivateInodeVMObject.cpp
     TestEmptySharedInodeVMObject.cpp
     TestExt2FS.cpp
@@ -69,11 +70,6 @@ endif()
 
 if (CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
     list(APPEND LIBTEST_BASED_SOURCES TestMemoryDeviceMmap.cpp)
-endif()
-
-# FIXME: Don't panic on SafeMem access faults on aarch64
-if (NOT CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
-    list(APPEND LIBTEST_BASED_SOURCES TestEFault.cpp)
 endif()
 
 foreach(libtest_source IN LISTS LIBTEST_BASED_SOURCES)
