Meta/gn: Add file added in 00e3f4b5f095 / #25863 to GN build
This is enough to get Ladybird building again with the GN build.

--- a/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
@@ -76,6 +76,7 @@ shared_library("LibGfx") {
     "ImageFormats/ILBMLoader.cpp",
     "ImageFormats/ISOBMFF/Boxes.cpp",
     "ImageFormats/ISOBMFF/JPEG2000Boxes.cpp",
+    "ImageFormats/ISOBMFF/JPEGXLBoxes.cpp",
     "ImageFormats/ISOBMFF/Reader.cpp",
     "ImageFormats/ImageDecoder.cpp",
     "ImageFormats/JBIG2Loader.cpp",
