LibCrypto: Implement the IPv4 header checksum

--- a/Userland/Libraries/LibCrypto/CMakeLists.txt
+++ b/Userland/Libraries/LibCrypto/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SOURCES
     Checksum/Adler32.cpp
     Checksum/cksum.cpp
     Checksum/CRC32.cpp
+    Checksum/IPv4Header.cpp
     Cipher/AES.cpp
     Cipher/ChaCha20.cpp
     Curves/Curve25519.cpp
