Utilities: Replace internet_checksum() with Crypto::Checksum::IPv4Header
No behavior change intended.

--- a/Userland/Utilities/CMakeLists.txt
+++ b/Userland/Utilities/CMakeLists.txt
@@ -357,6 +357,7 @@ target_link_libraries(paste PRIVATE LibGUI)
 target_link_libraries(patch PRIVATE LibDiff LibFileSystem)
 target_link_libraries(pdf PRIVATE LibGfx LibPDF)
 target_link_libraries(pgrep PRIVATE LibRegex)
+target_link_libraries(ping PRIVATE LibCrypto)
 target_link_libraries(pixelflut PRIVATE LibImageDecoderClient LibIPC LibGfx)
 target_link_libraries(pkill PRIVATE LibRegex)
 target_link_libraries(pledge PRIVATE LibELF)
@@ -381,6 +382,7 @@ target_link_libraries(test-imap PRIVATE LibIMAP)
 target_link_libraries(test-jpeg-roundtrip PRIVATE LibGfx)
 target_link_libraries(test-pthread PRIVATE LibThreading)
 target_link_libraries(touch PRIVATE LibFileSystem)
+target_link_libraries(traceroute PRIVATE LibCrypto)
 target_link_libraries(unzip PRIVATE LibArchive LibCompress LibCrypto LibFileSystem)
 target_link_libraries(update-cpp-test-results PRIVATE LibCpp)
 target_link_libraries(useradd PRIVATE LibCrypt)
