--- a/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
@@ -72,6 +72,7 @@ shared_library("LibGfx") {
     "ImageFormats/CCITTDecoder.cpp",
     "ImageFormats/DDSLoader.cpp",
     "ImageFormats/GIFLoader.cpp",
+    "ImageFormats/GIFWriter.cpp",
     "ImageFormats/ICOLoader.cpp",
     "ImageFormats/ILBMLoader.cpp",
     "ImageFormats/ISOBMFF/Boxes.cpp",
@@ -108,6 +109,7 @@ shared_library("LibGfx") {
     "ImageFormats/WebPWriter.cpp",
     "ImageFormats/WebPWriterLossless.cpp",
     "ImmutableBitmap.cpp",
+    "MedianCut.cpp",
     "Painter.cpp",
     "Palette.cpp",
     "Path.cpp",
