--- a/Meta/gn/secondary/Userland/Utilities/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Utilities/BUILD.gn
@@ -8,6 +8,17 @@ executable("base64") {
   ]
 }
 
+executable("image") {
+  sources = [ "image.cpp" ]
+  include_dirs = [ "//Userland/Libraries" ]
+  deps = [
+    "//AK",
+    "//Userland/Libraries/LibCore",
+    "//Userland/Libraries/LibGfx",
+    "//Userland/Libraries/LibMain",
+  ]
+}
+
 executable("js") {
   sources = [ "js.cpp" ]
   include_dirs = [ "//Userland/Libraries" ]
@@ -18,5 +29,17 @@ executable("js") {
     "//Userland/Libraries/LibLine",
     "//Userland/Libraries/LibMain",
     "//Userland/Libraries/LibTextCodec",
+  ]
+}
+
+executable("pdf") {
+  sources = [ "pdf.cpp" ]
+  include_dirs = [ "//Userland/Libraries" ]
+  deps = [
+    "//AK",
+    "//Userland/Libraries/LibCore",
+    "//Userland/Libraries/LibGfx",
+    "//Userland/Libraries/LibMain",
+    "//Userland/Libraries/LibPDF",
   ]
 }
