Meta/gn: Add build file for Tests/LibGfx

--- a/Meta/gn/secondary/Tests/BUILD.gn
+++ b/Meta/gn/secondary/Tests/BUILD.gn
@@ -1,6 +1,7 @@
 group("Tests") {
   deps = [
     "//Tests/AK",
+    "//Tests/LibGfx",
     "//Tests/LibJS",
     "//Tests/LibURL",
     "//Tests/LibWeb",
