Tests/LibWeb: Skip two tests that fail on CI fairly consistently

--- a/Tests/LibWeb/TestConfig.ini
+++ b/Tests/LibWeb/TestConfig.ini
@@ -17,3 +17,8 @@ Text/input/Worker/Worker-location.html
 Text/input/Worker/Worker-module.html
 Text/input/Worker/Worker-performance.html
 Text/input/Worker/Worker-postMessage-transfer.html
+
+; Fail on CI.
+; https://github.com/SerenityOS/serenity/issues/26072
+Text/input/ServiceWorker/service-worker-register.html
+Text/input/scroll-to-fragment.html
