Ladybird: Remove Qt Network support
Now that ladybird was moved moved to its own repository, we don't need
to keep unnecessary features like Qt networking around.
Ladybird only still exists in the SerenityOS repo to make testing LibWeb
easier.

Upstream ladybird also removed Qt networking support in 1b324f3ae11.

--- a/Ladybird/WebWorker/CMakeLists.txt
+++ b/Ladybird/WebWorker/CMakeLists.txt
@@ -19,13 +19,10 @@ if (ENABLE_QT)
     qt_add_executable(WebWorker
             ../Qt/EventLoopImplementationQt.cpp
             ../Qt/EventLoopImplementationQtEventTarget.cpp
-            ../Qt/RequestManagerQt.cpp
             ../Qt/StringUtils.cpp
-            ../Qt/WebSocketQt.cpp
-            ../Qt/WebSocketImplQt.cpp
             main.cpp
     )
-    target_link_libraries(WebWorker PRIVATE Qt::Core Qt::Network)
+    target_link_libraries(WebWorker PRIVATE Qt::Core)
     target_link_libraries(WebWorker PRIVATE webworker LibWebSocket)
     target_compile_definitions(WebWorker PRIVATE HAVE_QT=1)
     set_target_properties(WebWorker PROPERTIES AUTOMOC ON)
