Everywhere: Remove Windows support
Now that ladybird was moved moved to its own repository, there's little
reason to keep rudimentary windows support around.

--- a/Userland/Libraries/LibCore/CMakeLists.txt
+++ b/Userland/Libraries/LibCore/CMakeLists.txt
@@ -65,7 +65,7 @@ set(SOURCES
     TCPServer.cpp
     UDPServer.cpp
 )
-if (NOT ANDROID AND NOT WIN32 AND NOT EMSCRIPTEN)
+if (NOT ANDROID AND NOT EMSCRIPTEN)
     list(APPEND SOURCES
         Account.cpp
         FilePermissionsMask.cpp
@@ -73,7 +73,7 @@ if (NOT ANDROID AND NOT WIN32 AND NOT EMSCRIPTEN)
         Group.cpp
     )
 endif()
-if (NOT WIN32 AND NOT EMSCRIPTEN)
+if (NOT EMSCRIPTEN)
     list(APPEND SOURCES LocalServer.cpp)
 endif()
 
