Tests+LibC: Add tests for `sig2str()` and `str2sig()`
Now we also assert that signal names fit within SIG2STR_MAX.

--- a/Tests/LibC/CMakeLists.txt
+++ b/Tests/LibC/CMakeLists.txt
@@ -30,6 +30,7 @@ set(TEST_SOURCES
     TestRealpath.cpp
     TestScanf.cpp
     TestSearch.cpp
+    TestSignal.cpp
     TestSnprintf.cpp
     TestStackSmash.cpp
     TestStdio.cpp
