Ladybird: Only set AUTO{MOC,RCC} for targets that need it
No target needs AUTOUIC, so remove it.

--- a/Ladybird/WebContent/CMakeLists.txt
+++ b/Ladybird/WebContent/CMakeLists.txt
@@ -27,6 +27,7 @@ if (ENABLE_QT)
     )
     target_link_libraries(WebContent PRIVATE Qt::Core Qt::Network)
     target_compile_definitions(WebContent PRIVATE HAVE_QT=1)
+    set_target_properties(WebContent PROPERTIES AUTOMOC ON)
 
     if (NOT HAVE_PULSEAUDIO)
         find_package(Qt6 REQUIRED COMPONENTS Multimedia)
