Meta: Port recent changes to the GN build
d56888468092 LibGfx: Add a basic DICOM file loader

--- a/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
+++ b/Meta/gn/secondary/Userland/Libraries/LibGfx/BUILD.gn
@@ -71,6 +71,7 @@ shared_library("LibGfx") {
     "ImageFormats/BooleanDecoder.cpp",
     "ImageFormats/CCITTDecoder.cpp",
     "ImageFormats/DDSLoader.cpp",
+    "ImageFormats/DICOMLoader.cpp",
     "ImageFormats/GIFLoader.cpp",
     "ImageFormats/GIFWriter.cpp",
     "ImageFormats/ICOLoader.cpp",
