Tests/LibPDF: Add a basic /SMask test file
We don't support /SMask graphics state entries yet.

This will have to be expanded a lot once we start supporting it,
but for now it's a nice simple demo (as always, hand-written and
fixed up by `mutool clean`).

--- a/Tests/LibPDF/CMakeLists.txt
+++ b/Tests/LibPDF/CMakeLists.txt
@@ -29,6 +29,7 @@ set(TEST_FILES
     shade-gouraud-lattice.pdf
     shade-radial.pdf
     shade-tensor.pdf
+    smask.pdf
     standard-14-fonts.pdf
     text.pdf
     type1.pdf
