Tests/LibPDF: Add a text rendering modes test case
Hand-written and then fixed up with `mutool clean`.
`-dgg` apparently has the side effect of pretty-printing dicts
in expanded form, so I used that here.

We can't do any of these text rendering modes except "fill" yet.

--- a/Tests/LibPDF/CMakeLists.txt
+++ b/Tests/LibPDF/CMakeLists.txt
@@ -33,6 +33,7 @@ set(TEST_FILES
     smask.pdf
     standard-14-fonts.pdf
     text.pdf
+    text-rendering-modes.pdf
     type1.pdf
     type3.pdf
     wide-gamut-only.pdf
