Tests: Add RISC-V disassembly tests
These tests make sure that every single non-trivial permutation of every
RV64G instruction diassembles correctly.

--- a/Meta/Lagom/CMakeLists.txt
+++ b/Meta/Lagom/CMakeLists.txt
@@ -683,6 +683,7 @@ if (BUILD_LAGOM)
             AK
             LibCrypto
             LibCompress
+            LibDisassembly
             LibGL
             LibGfx
             LibHID
