Kernel: Introduce a new implementation of WaitQueue
This implementation is centered around block conditions, and as a result
no wakeups will be lost.

--- a/Kernel/CMakeLists.txt
+++ b/Kernel/CMakeLists.txt
@@ -394,6 +394,7 @@ set(KERNEL_SOURCES
     Tasks/Thread.cpp
     Tasks/ThreadBlockers.cpp
     Tasks/ThreadTracer.cpp
+    Tasks/WaitQueue.cpp
     Tasks/WorkQueue.cpp
     Time/TimeManagement.cpp
     Time/TimerQueue.cpp
