WindowServer: Make overlay rect shadow customizable in themes

--- a/Base/res/themes/Chillychilly.ini
+++ b/Base/res/themes/Chillychilly.ini
@@ -39,7 +39,7 @@ BaseText=#353535
 DisabledTextFront=#999999
 DisabledTextBack=white
 ThreedHighlight=#e7f5ee
-ThreedShadow1=#aeb8b3 
+ThreedShadow1=#aeb8b3
 ThreedShadow2=#616663
 HoverHighlight=#e2ece7
 Selection=#3c6e71
@@ -52,7 +52,7 @@ RubberBandBorder=#284b63
 Link=blue
 ActiveLink=red
 VisitedLink=magenta
-Gutter=#cfdbd5 
+Gutter=#cfdbd5
 GutterBorder=cfdbd5
 Ruler=#d4e0da
 RulerBorder=#d4e0da
@@ -103,3 +103,4 @@ MenuShadow=/res/icons/themes/Chillychilly/menu-shadow.png
 TaskBarShadow=/res/icons/themes/Chillychilly/frame-shadow-light.png
 TooltipShadow=/res/icons/themes/Chillychilly/frame-shadow-light.png
 TitleButtonIcons=/res/icons/themes/Chillychilly/16x16/
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
