--- a/Base/res/themes/Contrast.ini
+++ b/Base/res/themes/Contrast.ini
@@ -18,6 +18,7 @@ ActiveWindowShadow=/res/icons/themes/Default/frame-shadow-dark.png
 InactiveWindowShadow=/res/icons/themes/Default/frame-shadow-light.png
 MenuShadow=/res/icons/themes/Default/frame-shadow-light.png
 TitleButtonIcons=/res/icons/themes/Contrast/16x16/
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
 
 [Colors]
 SyntaxComment=#6b8e23ff
