--- a/Base/res/themes/Cupertino.ini
+++ b/Base/res/themes/Cupertino.ini
@@ -93,3 +93,4 @@ InactiveWindowShadow=
 MenuShadow=/res/icons/themes/Default/frame-shadow-light.png
 TaskBarShadow=/res/icons/themes/Default/frame-shadow-light.png
 TooltipShadow=/res/icons/themes/Default/frame-shadow-light.png
+OverlayRectShadow=
