--- a/Base/res/themes/Durrque.ini
+++ b/Base/res/themes/Durrque.ini
@@ -22,6 +22,7 @@ ActiveWindowShadow=/res/icons/themes/Durrque/frame-shadow-dark.png
 MenuShadow=/res/icons/themes/Durrque/frame-shadow-light.png
 TaskbarShadow=
 TitleButtonIcons=/res/icons/themes/Durrque/16x16/
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
 
 [Colors]
 TrayText=#1f6febff
@@ -104,4 +105,3 @@ Selection=#1f6febff
 RubberBandBorder=#1f6febff
 MovingWindowTitle=#ffffdfff
 HoverHighlight=#1f6febff
-
