--- a/Base/res/themes/Light.ini
+++ b/Base/res/themes/Light.ini
@@ -90,3 +90,4 @@ InactiveWindowShadow=/res/icons/themes/Default/frame-shadow-light.png
 TitleButtonIcons=/res/icons/themes/Light/16x16/
 MenuShadow=/res/icons/themes/Redmond/menu-shadow.png
 TooltipShadow=/res/icons/themes/Redmond/menu-shadow.png
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
