--- a/Base/res/themes/Plum.ini
+++ b/Base/res/themes/Plum.ini
@@ -94,3 +94,4 @@ InactiveWindowShadow=/res/icons/themes/Default/frame-shadow-light.png
 MenuShadow=/res/icons/themes/Default/frame-shadow-light.png
 TaskBarShadow=/res/icons/themes/Default/frame-shadow-light.png
 TooltipShadow=/res/icons/themes/Default/frame-shadow-light.png
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
