--- a/Base/res/themes/Pumpkin.ini
+++ b/Base/res/themes/Pumpkin.ini
@@ -18,6 +18,7 @@ ActiveWindowShadow=/res/icons/themes/Default/frame-shadow-dark.png
 InactiveWindowShadow=/res/icons/themes/Default/frame-shadow-light.png
 MenuShadow=/res/icons/themes/Default/frame-shadow-light.png
 TitleButtonIcons=/res/icons/16x16/
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
 
 [Colors]
 SyntaxComment=#a0a1a7ff
@@ -94,4 +95,3 @@ InactiveWindowTitleStripes=#ce7526ff
 MenuBase=#ffffffff
 FocusOutline=#909090ff
 HighlightWindowTitleStripes=#bf600cff
-
