--- a/Base/res/themes/Redmond Glass.ini
+++ b/Base/res/themes/Redmond Glass.ini
@@ -108,3 +108,4 @@ MenuShadow=
 TaskBarShadow=
 TooltipShadow=
 TitleButtonIcons=/res/icons/themes/RedmondGlass/16x16/
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
