--- a/Base/res/themes/Redmond Plastic.ini
+++ b/Base/res/themes/Redmond Plastic.ini
@@ -109,3 +109,4 @@ MenuShadow=
 TaskBarShadow=
 TooltipShadow=
 TitleButtonIcons=/res/icons/themes/RedmondPlastic/16x16/
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
