--- a/Base/res/themes/Silver.ini
+++ b/Base/res/themes/Silver.ini
@@ -21,6 +21,7 @@ ActiveWindowShadow=
 InactiveWindowShadow=
 MenuShadow=
 TitleButtonIcons=/res/icons/themes/Silver/16x16/
+OverlayRectShadow=
 
 [Colors]
 DesktopBackground=#63639cff
