--- a/Base/res/themes/Gruvbox Dark.ini
+++ b/Base/res/themes/Gruvbox Dark.ini
@@ -89,3 +89,4 @@ MenuShadow=/res/icons/themes/Default/frame-shadow-light.png
 TaskBarShadow=/res/icons/themes/Default/frame-shadow-light.png
 TooltipShadow=/res/icons/themes/Default/frame-shadow-light.png
 ColorScheme=/res/color-schemes/Gruvbox Dark.ini
+OverlayRectShadow=/res/icons/themes/Default/overlay-rect-shadow.png
